Update API_BASE to Render deployment URL

--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
 
 <script>
     // ===== CONFIG =====
-    const API_BASE = 'http://localhost:5000/api';
+    const API_BASE = 'https://medical-adhernce.onrender.com/api';
     
     let currentUser = null;
     let userMedicalInfo = null;
