Rename Pill Pal to Medical Support

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💊 Pill Pal - Medication Adherence Support</title>
+    <title>💊 Medical Support - Medication Adherence Support</title>
     <style>
         * {
             margin: 0;
@@ -592,7 +592,7 @@
 <!-- ===== LOGIN PAGE ===== -->
 <div id="loginPage" class="login-container">
     <div class="login-card">
-        <div class="login-title">💊 Pill Pal</div>
+        <div class="login-title">💊 Medical Support</div>
         <div class="login-subtitle">Medication Adherence Support</div>
 
         <div id="loginForm" class="login-form-section">
@@ -657,7 +657,7 @@
 <div id="mainApp" style="display:none;">
     <!-- Navigation -->
     <div class="navbar">
-        <div class="navbar-brand">💊 Pill Pal</div>
+        <div class="navbar-brand">💊 Medical Support</div>
         <div class="navbar-menu">
             <a onclick="showTab('dashboard')">Dashboard</a>
             <a onclick="showTab('prescription')">Prescription</a>
